pm2 ecosystem created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
         "Restaurantes",
+        "Ubchdxp",
+        "XVCJ",
+        "ZCFGZ",
         "authz",
         "maxlength",
         "minlength",
